--- a/Source/RimThreaded.csproj
+++ b/Source/RimThreaded.csproj
@@ -25,27 +25,23 @@
 	<LangVersion>latest</LangVersion>
 	<IsPublishable>False</IsPublishable>
 	<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-	<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<GenerateDocumentationFile>False</GenerateDocumentationFile>
 	<DocumentationFile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PubliciseOutputPath>..\Dependencies\1.4\</PubliciseOutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PubliciseOutputPath>..\Dependencies\1.4\</PubliciseOutputPath>
     <DebugType>portable</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\1.4\Assemblies\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
@@ -53,6 +49,9 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
 	<LangVersion>latest</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+	<Publicize Include="Assembly-CSharp" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Remove="Properties\**" />
     <EmbeddedResource Remove="Properties\**" />
@@ -74,6 +73,7 @@
   </ItemGroup>
     <ItemGroup>
 	    <Publicize Include="Assembly-CSharp" />
+	    <Publicize Include="0Harmony" />
     </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
